# app/Http/Controllers/Api/PayStatusController.php
@@ -17,18 +17,26 @@ use App\Models\InvoiceShipmentDetailItem;
 use App\Models\Profile;
 use App\Models\ProfileInternal;
 use App\Services\DocumentServices;
+use App\Services\PaymentService;
+use App\Services\ShipmentService;
+use Illuminate\Http\JsonResponse;
 
 class PayStatusController extends Controller
 {
     use MapTrait;
 
+    public function __construct(
+        private readonly PaymentService $paymentService,
+        private readonly ShipmentService $shipmentService,
+    ){}
+
     /**
      * Получение json об обновлении статуса заказа
      *
      * @param PayStatusRequest $request
-     * @return void
+     * @return JsonResponse
      */
-    public function updateStatus(PayStatusRequest $request)
+    public function updateStatus(PayStatusRequest $request): JsonResponse
     {
         /**
          * Получение валидированных параметров запроса
@@ -37,162 +45,23 @@ class PayStatusController extends Controller
         $payStatusRequest = $request->validated();
 
         if(isset($payStatusRequest['data'])){
-            $this->invoicePaymentCreate($payStatusRequest['data']);
+            foreach ($payStatusRequest['data'] as $dataShipment){
+                $this->paymentService->savePaymentInfo($dataShipment);
+            }
         }
 
         if(isset($payStatusRequest['data_shipment'])){
-            $this->invoiceShipmentCreate($payStatusRequest['data_shipment']);
-        }
-    }
 
-    /**
-     * Создание invoicePayment и его invoicePaymentItem
-     *
-     * @param $paymentData
-     * @return void
-     */
-    private function invoicePaymentCreate($paymentData)
-    {
-        foreach ($paymentData as $dataPayment) {
-            $invoice = Invoice::where('order_id', $dataPayment['order_id'])->first();
+            foreach ($payStatusRequest['data_shipment'] as $dataShipment){
+                $this->shipmentService->saveShipmentInfo($dataShipment);
 
-            if (is_null($invoice)) {
-                continue;
-            }
-
-            if ($invoice->contract_date == strtotime("Y-m-d H:i:s", 0)) {
-                $invoice->contract_date =  $dataPayment['contract_date'];
-                $invoice->save();
-            }
-
-            $paymentResource = $this->viewPaymentItem($dataPayment);
-
-            InvoicePayment::updateOrCreate(
-                ['order_id' => $dataPayment['order_id']], // Необходимо уточнение, что именно являеся уникальным атрибутом таблицы
-                [
-                    'order_id' => $dataPayment['order_id'],
-                    'paid_amount' => (double)str_replace(',', '.', $this->replaceSpaces($dataPayment['paid_amount'])),
-                    'paid_percent' => (int)$dataPayment['paid_percent'],
-                    'last_payment_date' => date('Y-m-d H:i:s', $paymentResource['last_payment_date']),
-                ]
-            );
-
-            /**
-             * Удаление истории прошлых оплат
-             */
-            InvoicePaymentItem::where('order_id', $dataPayment['order_id'])->delete();
-
-            foreach ($paymentResource['paymentItems'] as $item) {
-                $item->save();
-            }
-        }
-    }
-
-    /**
-     * @param $paymentData | Массив действий в заказе - paid_detail
-     * @return array
-     */
-    private function viewPaymentItem($paymentData)
-    {
-        $lastPaymentDate = 0;
-        $paymentItemArray = [];
-
-        $detail = $paymentData['paid_detail'];
-
-        foreach ($detail as $detailData) {
-            $invoicePI = new InvoicePaymentItem;
-            $invoicePI->order_id = $paymentData['order_id'];
-            $invoicePI->amount = (double)$invoicePI->replaceSpaces($detailData['paid_amount']);
-            $invoicePI->percent = (int)$detailData['paid_percent'];
-            $invoicePI->payment_date = $detailData['paid_date'];
-            array_push($paymentItemArray, $invoicePI);
-
-            if ($lastPaymentDate < strtotime($detailData['paid_date'])) {
-                $lastPaymentDate = strtotime($detailData['paid_date']);
+                $this->createShipmentFiles($dataShipment['order_id'], $dataShipment['shipment_file']);
             }
         }
 
-        return ['last_payment_date' => $lastPaymentDate, 'paymentItems' => $paymentItemArray];
+        return response()->json(['status' => 'ok']);
     }
 
-    /**
-     * Создание отгрузки товара invoiceShipment
-     *
-     * @param $shipmentData
-     * @return void
-     */
-    private function invoiceShipmentCreate($shipmentData)
-    {
-        foreach ($shipmentData as $dataShipment) {
-            $invoice = Invoice::where(['order_id' => $dataShipment['order_id']])->first();
-
-            if (is_null($invoice)) {
-                continue;
-            }
-
-            InvoiceShipment::updateOrCreate(['order_id' => $dataShipment['order_id']],
-                [
-                    'order_id' => $dataShipment['order_id'],
-                    'currency' => $dataShipment['selling_currency'],
-                    'amount' => (double)$this->replaceSpaces($dataShipment['selling_amount']),
-                ]
-            );
-
-            foreach ($dataShipment['selling_detail'] as $details) {
-                $this->createShipmentDetail($dataShipment['order_id'], $details);
-            }
-
-            $this->createShipmentFiles($dataShipment['order_id'], $dataShipment['shipment_file']);
-        }
-    }
-
-    /**
-     * Создание отгрузки товара invoiceShipmentDetail
-     *
-     * @param $order_id | Номер заказа
-     * @param $details | Детали заказа
-     * @return void
-     */
-    private function createShipmentDetail($order_id, $details): void
-    {
-        InvoiceShipmentDetail::updateOrCreate(['realization_id' => $details['selling_id']],
-            [
-                'order_id' => $order_id,
-                'realization_id' => $details['selling_id'],
-                'realization_number' => (int)$details['selling_number'],
-                'amount' => (double)$this->replaceSpaces($details['selling_sum']),
-                'transport_company' => $details['transport_company'],
-                'transport_company_id' => $details['transport_company_number'],
-                'date' => $details['selling_date'],
-            ]
-        );
-
-        InvoiceShipmentDetailItem::where(['order_id' => $order_id])->delete();
-
-        foreach ($details['shipment_detail'] as $detail) {
-            $this->createShipmentDetailItem($order_id, $detail);
-        }
-    }
-
-    /**
-     * Создание отгрузки товара invoiceShipmentDetailItem
-     *
-     * @param $order_id | Номер заказа
-     * @param $detail | Товары в заказе
-     * @return void
-     */
-    private function createShipmentDetailItem($order_id, $detail): void
-    {
-        $detailItem = new InvoiceShipmentDetailItem;
-        $invoiceItem = InvoiceItem::where(['internal_id' => $detail['product_id'], 'order_id' => $order_id])->first();
-
-        if (!is_null($invoiceItem)) {
-            $detailItem->order_id = $order_id;
-            $detailItem->invoice_product_id = $invoiceItem->id;
-            $detailItem->product_qty = $detail['product_qty'];
-            $detailItem->save();
-        }
-    }
 
     /**
      * Создание файлов отгрузки
@@ -220,8 +89,9 @@ class PayStatusController extends Controller
      * Получение Хэша пользователя для создания архива отгрузки
      *
      * @param string $order_id
+     * @return string|null
      */
-    private function getUserHash($order_id) : ?string
+    private function getUserHash(string $order_id) : ?string
     {
         $invoice = Invoice::where(['order_id' => $order_id])->first();
         if (is_null($invoice)) {
